--- a/include/sub_include/Makefile.am
+++ b/include/sub_include/Makefile.am
@@ -5,7 +5,7 @@
 # @file    Makefile.am
 # @brief   
 # @author  gnsyxiang <gnsyxiang@163.com>
-# @date    05/03 2021 10:38
+# @date    05/03 2021 17:20
 # @version v0.0.1
 # 
 # @since    note
@@ -15,26 +15,13 @@
 #     NO.     Author              Date            Modified
 #     00      zhenquan.qiu        05/03 2021      create the file
 # 
-#     last modified: 05/03 2021 10:38
+#     last modified: 05/03 2021 17:20
 # ===============================================================
 
-INCLUDE_COM = \
-			  -I$(top_srcdir)/include
+HEADERS_COM = \
+			  aaa.h
 
-CFLAGS_COM = \
-			 $(AM_CFLAGS_COM) \
-			 $(INCLUDE_COM)
+install_includedir 	= $(includedir)/@project_name@/sub_include
 
-LDADD_COM = \
-			$(top_builddir)/src/libxxx.la
-
-LDFLAGS_COM = \
-			  -Wl,--gc-sections
-
-bin_PROGRAMS 	=
-
-bin_PROGRAMS	+= main
-main_SOURCES 	= main.c
-main_CFLAGS  	= $(CFLAGS_COM)
-main_LDADD   	= $(LDADD_COM)
-main_LDFLAGS	= $(LDFLAGS_COM)
+noinst_HEADERS  		=
+install_include_HEADERS = $(HEADERS_COM)
