--- a/src/sub_src/Makefile.am
+++ b/src/sub_src/Makefile.am
@@ -5,7 +5,7 @@
 # @file    Makefile.am
 # @brief   
 # @author  gnsyxiang <gnsyxiang@163.com>
-# @date    05/03 2021 10:38
+# @date    05/03 2021 17:09
 # @version v0.0.1
 # 
 # @since    note
@@ -15,26 +15,29 @@
 #     NO.     Author              Date            Modified
 #     00      zhenquan.qiu        05/03 2021      create the file
 # 
-#     last modified: 05/03 2021 10:38
+#     last modified: 05/03 2021 17:09
 # ===============================================================
+
+noinst_LTLIBRARIES = libaaa.la
+
+SOURCES_COM = \
+			  aaa.c
 
 INCLUDE_COM = \
 			  -I$(top_srcdir)/include
 
 CFLAGS_COM = \
+			 -ffunction-sections \
+			 -fdata-sections \
 			 $(AM_CFLAGS_COM) \
 			 $(INCLUDE_COM)
 
-LDADD_COM = \
-			$(top_builddir)/src/libxxx.la
+LIBADD_COM =
 
 LDFLAGS_COM = \
-			  -Wl,--gc-sections
+			  -rdynamic
 
-bin_PROGRAMS 	=
-
-bin_PROGRAMS	+= main
-main_SOURCES 	= main.c
-main_CFLAGS  	= $(CFLAGS_COM)
-main_LDADD   	= $(LDADD_COM)
-main_LDFLAGS	= $(LDFLAGS_COM)
+AM_CFLAGS 			= $(CFLAGS_COM)
+libaaa_la_SOURCES  	= $(SOURCES_COM)
+libaaa_la_LIBADD   	= $(LIBADD_COM)
+libaaa_la_LDFLAGS  	= $(LDFLAGS_COM)
