feat: use git project to generate so lib

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -26,7 +26,7 @@ CFLAGS_COM = \
 			 $(INCLUDE_COM)
 
 LDADD_COM = \
-			$(top_builddir)/src/libmodule_a.la
+			$(top_builddir)/src/lib@project_name@.la
 
 LDFLAGS_COM = \
 			  -Wl,--gc-sections
