feat: add project url and sync pkgconfig url

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ m4_include([res/m4/ax_prog_doxygen.m4])
 
 m4_include([res/m4/enable_feature_xxx.m4])
 
-AC_INIT([PROJECT_NAME], [VERSION_NUM], [EMAIL_INFO], [PROJECT_NAME])
+AC_INIT([PROJECT_NAME], [VERSION_NUM], [EMAIL_INFO], [PROJECT_NAME], [PROJECT_URL])
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
