--- a/autotools-demo.pc.in
+++ b/autotools-demo.pc.in
@@ -2,15 +2,16 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 includedir=@includedir@
 libdir=@libdir@
-bindir=@bindir@
 
 Name: @PACKAGE@
-Description: introduce information about the library
-URL: www.xxx.com
 Version: @VERSION@
+URL: @PACKAGE_URL@
+Description: introduce information about the library
+
 Requires:
 Requires.private:
 Conflicts:
+
 Cflags: -I${includedir}
 Libs: -L${libdir} -l@PACKAGE@
 Libs.private:
