--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,7 @@ m4_include([res/m4/check_doxygen.m4])
 m4_include([res/m4/ax_prog_doxygen.m4])
 
 m4_include([res/m4/enable_feature_xxx.m4])
+m4_include([res/m4/select_feature_xxx.m4])
 
 AC_INIT([PROJECT_NAME], [VERSION_NUM], [EMAIL_INFO], [PROJECT_NAME], [PROJECT_URL])
 AC_CONFIG_SRCDIR([config.h.in])
@@ -28,6 +29,7 @@ CHECK_VERSION_INFO
 CHECK_DOXYGEN
 
 ENABLE_FEATURE_XXX
+SELECT_FEATURE_XXX
 
 # Checks for programs.
 AC_PROG_CXX
