--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,10 @@
 #---------------
 .SpaceVim.d/
 .clang
-
+.ccls
+.ccls-cache
+.clang-format
+compile_commands.json
 
 
 #---------------------
@@ -61,13 +64,16 @@ stamp-h1
 # ignore for building
 #--------------------
 .libs/
-build/
+_build/
 install/
+
+autotools-demo.pc
 
 *.o
 *.lo
 *.la
 
 example/main
+example/test
 
 
