build: add sequence-diagram.md file

--- a/configure.ac
+++ b/configure.ac
@@ -52,6 +52,7 @@ AC_PROG_MKDIR_P
 
 AC_CONFIG_FILES([Makefile
                  $PACKAGE_NAME.pc
+                 docs/Makefile
                  example/Makefile
                  include/Makefile
                  include/sub_include/Makefile
