--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -27,7 +27,7 @@ install_files_com 	= sequence_diagram.md
 dist_doc_DATA 		= $(install_files_com)
 
 svg_path 			= $(abs_top_builddir)/docs/plantuml
-pic_files_com 		= \
+pic_files_com 		= $(svg_path)/sequence_diagram-deinit.svg \
 					  $(svg_path)/sequence_diagram-init.svg
 pic_docdir 			= $(docdir)/pic
 pic_doc_DATA 		= $(pic_files_com)
