fix: change *.pc name

--- a/autotools_demo_lib.pc.in
+++ b/autotools_demo_lib.pc.in
@@ -6,7 +6,7 @@ libdir=@libdir@
 Name: @PACKAGE@
 Version: @VERSION@
 URL: @PACKAGE_URL@
-Description: introduce information about the library
+Description: autotools demo for lib
 
 Requires:
 Requires.private:
