--- a/.gitignore
+++ b/.gitignore
@@ -38,15 +38,21 @@ autoscan.log
 configure.scan
 
 # ignore for autogen.sh
-m4/
-!res/m4
 build-aux/
 autom4te.cache/
 
+m4/check_project_info.m4
+m4/libtool.m4
+m4/lt~obsolete.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+aclocal.m4
+
 configure
 config.h.in~
-Makefile.in
-aclocal.m4
+
+*.in
 
 # ignore for configure
 .deps/
