--- a/src/sub_src/Makefile.am
+++ b/src/sub_src/Makefile.am
@@ -20,27 +20,35 @@
 
 noinst_LTLIBRARIES = libmodule_b.la
 
-sources_com 	=
-include_com  	=
-cppflags_com 	=
-ldadd_com 		=
-ldflags_com 	=
+_include_com  	=
+_sources_com 	=
+_cppflags_com 	=
+_cflags_com 	=
+_cxxflags_com 	=
+_ldflags_com 	=
+_ldadd_com 		=
 
 # ---------------------
 # add necessary content
 # ---------------------
-sources_com 	+= module_b.c
+_include_com  	+= -I$(top_srcdir)/include
 
-include_com  	+= -I$(top_srcdir)/include
-cppflags_com 	+= $(LIB_CPPFLAGS_COM) \
-				   $(CPPFLAGS_COM) \
-				   $(include_com)
+_sources_com 	+= module_b.c
 
-ldadd_com 		+=
+_cppflags_com 	+= $(CPPFLAGS_COM) \
+				   $(_include_com)
 
-ldflags_com 	+= $(LIB_LDFLAGS_COM)
+_cflags_com 	+= $(CFLAGS_COM)
 
-AM_CFLAGS 				= $(cppflags_com)
-libmodule_b_la_SOURCES  = $(sources_com)
-libmodule_b_la_LIBADD   = $(ldadd_com)
-libmodule_b_la_LDFLAGS  = $(ldflags_com)
+_cxxflags_com 	+= $(CXXFLAGS_COM)
+
+_ldflags_com 	+= $(LIB_LDFLAGS_COM)
+
+_ldadd_com 		+=
+
+libmodule_b_la_SOURCES  = $(_sources_com)
+libmodule_b_la_CPPFLAGS = $(_cppflags_com)
+libmodule_b_la_CFLAGS 	= $(_cflags_com)
+libmodule_b_la_CXXFLAGS = $(_cxxflags_com)
+libmodule_b_la_LDFLAGS  = $(_ldflags_com)
+libmodule_b_la_LIBADD   = $(_ldadd_com)
