refactor: refactor Makefile.am files

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,41 +20,59 @@
 
 include res/doxygen.am
 
-SUBDIRS = include \
-		  src \
-		  example \
-		  docs \
-		  res
+SUBDIRS = \
+          include \
+          src \
+          example \
+          docs \
+          res
 
-# -----
-# flags
-# -----
-ACLOCAL_AMFLAGS 	= -I m4
+# ------------------
+# defining variables
+# ------------------
+_no_error_com       =
+_remove_unuse_func  =
+_install_files_com  =
+_dist_files_com     =
 
-_no_error_com 		= -W -Wall -Werror \
-					  -Wno-unused-parameter \
-					  -Wno-error=unused-but-set-variable
+CPPFLAGS_COM        =
+CFLAGS_COM          =
+CXXFLAGS_COM        =
+LIB_LDFLAGS_COM     =
+BIN_LDFLAGS_COM     =
+
+ACLOCAL_AMFLAGS     = -I m4
+pkgconfigdir        = $(libdir)/pkgconfig
+
+# ---------------------
+# add necessary content
+# ---------------------
+_no_error_com       += \
+                       -W -Wall -Werror \
+                       -Wno-unused-parameter \
+                       -Wno-error=unused-but-set-variable
 
 # 下面两个参数一个显示警告，一个直接通过
-_no_error_com 		+= -Wno-error=unused-parameter
-# _no_error_com 		+= -Wno-unused-parameter
+_no_error_com       += -Wno-error=unused-parameter
+# _no_error_com         += -Wno-unused-parameter
 
-_remove_unuse_func 	= -ffunction-sections \
-					  -fdata-sections
+_remove_unuse_func  += \
+                       -ffunction-sections \
+                       -fdata-sections
 
-CPPFLAGS_COM 		= -pipe \
-					  $(_no_error_com) \
-					  $(ACLOCAL_AMFLAGS)
+CPPFLAGS_COM        += \
+                       -pipe \
+                       $(_no_error_com) \
+                       $(ACLOCAL_AMFLAGS)
 
-CFLAGS_COM 			= $(_remove_unuse_func)
-
-CXXFLAGS_COM 		= $(_remove_unuse_func)
+CFLAGS_COM          += $(_remove_unuse_func)
+CXXFLAGS_COM        += $(_remove_unuse_func)
 
 # 用来通知链接器将所有符号添加到动态符号表中
 #（目的是能够通过使用 dlopen 来实现向后跟踪）
-LIB_LDFLAGS_COM 	= -rdynamic
+LIB_LDFLAGS_COM     += -rdynamic
 
-BIN_LDFLAGS_COM 	= -Wl,--gc-sections
+BIN_LDFLAGS_COM     += -Wl,--gc-sections
 
 export CPPFLAGS_COM
 export CFLAGS_COM
@@ -65,19 +83,19 @@ export BIN_LDFLAGS_COM
 # ------------------
 # make install files
 # ------------------
-_install_files_com 	= LICENSE \
-					  README.md
-dist_doc_DATA 		= $(_install_files_com)
-
-pkgconfigdir 		= $(libdir)/pkgconfig
-pkgconfig_DATA 		= @PACKAGE_NAME@.pc
+_install_files_com  += \
+                       LICENSE \
+                       README.md
+dist_doc_DATA       = $(_install_files_com)
+pkgconfig_DATA      = @PACKAGE_NAME@.pc
 
 # ---------------
 # make dist files
 # ---------------
-_dist_files_com 	= autogen.sh \
-					  @PACKAGE_NAME@.pc.in
-EXTRA_DIST 			= $(_dist_files_com)
+_dist_files_com     += \
+                       autogen.sh \
+                       @PACKAGE_NAME@.pc.in
+EXTRA_DIST          = $(_dist_files_com)
 
 # dist_bin_SCRIPTS = $(INSTALL_SCRIPTS_COM)
 #install-exec-hook:
