--- a/res/Makefile.am
+++ b/res/Makefile.am
@@ -18,10 +18,16 @@
 #     last modified: 08/03 2021 08:16
 # ===============================================================
 
+# ------------------
+# defining variables
+# ------------------
+_dist_file_com  =
+
 # ---------------
 # make dist files
 # ---------------
-DIST_FILES_COM 	= Doxyfile \
-				  get_project_info.sh
-EXTRA_DIST 		= $(DIST_FILES_COM)
+_dist_file_com  += \
+                   Doxyfile \
+                   get_project_info.sh
+EXTRA_DIST      = $(_dist_file_com)
 
