--- a/src/sub_src/Makefile.am
+++ b/src/sub_src/Makefile.am
@@ -20,35 +20,40 @@
 
 noinst_LTLIBRARIES = libmodule_b.la
 
-_include_com  	=
-_sources_com 	=
-_cppflags_com 	=
-_cflags_com 	=
-_cxxflags_com 	=
-_ldflags_com 	=
-_ldadd_com 		=
+# ------------------
+# defining variables
+# ------------------
+_include_com    =
+_sources_com    =
+_cppflags_com   =
+_cflags_com     =
+_cxxflags_com   =
+_ldflags_com    =
+_ldadd_com      =
 
 # ---------------------
 # add necessary content
 # ---------------------
-_include_com  	+= -I$(top_srcdir)/include
+_include_com    += -I$(top_srcdir)/include
 
-_sources_com 	+= module_b.c
+_sources_com    += module_b.c
 
-_cppflags_com 	+= $(CPPFLAGS_COM) \
-				   $(_include_com)
+_cppflags_com   += \
+                   $(CPPFLAGS_COM) \
+                   $(_include_com)
 
-_cflags_com 	+= $(CFLAGS_COM)
+_cflags_com     += $(CFLAGS_COM)
 
-_cxxflags_com 	+= $(CXXFLAGS_COM)
+_cxxflags_com   += $(CXXFLAGS_COM)
 
-_ldflags_com 	+= $(LIB_LDFLAGS_COM)
+_ldflags_com    += $(LIB_LDFLAGS_COM)
 
-_ldadd_com 		+=
+_ldadd_com      +=
 
 libmodule_b_la_SOURCES  = $(_sources_com)
 libmodule_b_la_CPPFLAGS = $(_cppflags_com)
-libmodule_b_la_CFLAGS 	= $(_cflags_com)
+libmodule_b_la_CFLAGS   = $(_cflags_com)
 libmodule_b_la_CXXFLAGS = $(_cxxflags_com)
 libmodule_b_la_LDFLAGS  = $(_ldflags_com)
 libmodule_b_la_LIBADD   = $(_ldadd_com)
+
