refactor: rename docs to doc

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,7 +24,7 @@ SUBDIRS = \
           include \
           src \
           example \
-          docs \
+          doc \
           res
 
 # ------------------
