build: fix link library

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -48,9 +48,9 @@ _cflags_com     += $(CFLAGS_COM)
 
 _cxxflags_com   += $(CXXFLAGS_COM)
 
-_ldflags_com    += \
-                   $(BIN_LDFLAGS_COM) \
-                   $(top_builddir)/src/lib@project_name@.la
+_ldflags_com    += $(BIN_LDFLAGS_COM)
+
+_ldadd_com      += $(top_builddir)/src/lib@project_name@.la
 
 bin_PROGRAMS    += test
 test_SOURCES    = $(_sources_com) test.c
